2018-06-10  Dirk Eddelbuettel  <edd@debian.org>

	* src/emaWrapper.cpp: Update example
	* man/EMAnext.Rd: Idem

	* src/smaWrapper.cpp: Update example
	* man/SMAnext.Rd: Idem

	* .travis.yml (install): Install suggested package xts as needed
	for examples

	* README.md: Added examples

2018-06-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/rollingWrapper.cpp: Rolling functions
	* man/rollingCentralMoment.Rd: Documentation

	* README.md: Added
	* rcpputs.Rproj: Added
	* .travis.yml: Added

2018-06-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/emaWrapper.cpp: EMA functions
	* man/EMAnext.Rd: Documentation

	* src/smaWrapper.cpp: SMA functions
	* man/SMAnext.Rd: Documentation

	* src/test.cpp (utsExample): Added docs and example
	* man/utsExample.Rd: Idem

2018-06-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/test.cpp: Initial commit with original example